# api-gateway

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  TODO.md  config.example.yaml  docker-compose.yml  pyproject.toml
deploy/: nginx.conf.template
docs/: initial-implementation-summary.md  overview.md
scripts/: entrypoint.sh  install_rtunnel.sh
src/api_gateway/: __init__.py  app.py  auth.py  config.py  main.py  tmux.py
tests/: test_app.py  test_auth.py  test_config.py  test_deploy_scripts.py  test_nginx_template.py  test_tmux.py
