[project]
name = "api-gateway"
version = "0.1.0"
description = "Lightweight LLM API forwarding gateway for intranet services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<0.112",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "pyyaml>=6.0,<7.0",
  "uvicorn>=0.30,<0.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "respx>=0.21,<1.0",
  "ruff>=0.5,<0.7",
]

[project.scripts]
gateway = "api_gateway.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
