[project]
name = "api-gateway"
version = "0.1.0"
description = "Authenticated rtunnel, sshd, and tmux gateway for intranet services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<0.112",
  "pydantic>=2.7,<3.0",
  "pyyaml>=6.0,<7.0",
  "uvicorn>=0.30,<0.31",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.5,<0.7",
]

[project.scripts]
gateway = "api_gateway.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
